# bevyhub

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/workflows/: release.yml  test.yml
crates/bevyhub_api/: .env.example  Cargo.toml  README.md  justfile
crates/bevyhub_api/examples/: curl.rs  export_bindings.rs
crates/bevyhub_api/src/: lib.rs
crates/bevyhub_api/src/cargo_registry/: cargo_registry.rs  crates_io.rs  crates_io_api.rs  local_cache_registry.rs  mod.rs  throttle.rs
crates/bevyhub_api/src/crate_doc/: cargo_manifest_types.rs  crate_doc.rs  unpack_crate_to_db.rs
crates/bevyhub_api/src/crates_io/: crate_routes.rs  crates_io_files.rs  mod.rs
crates/bevyhub_api/src/document_db/: doc_id.rs  document_db.rs  memory_collection.rs  mongo_db.rs
crates/bevyhub_api/src/github/: github_api.rs  github_files.rs  github_routes.rs  mod.rs
crates/bevyhub_api/src/object_storage/: fs_storage.rs  object_storage.rs  s3_storage.rs  utils_storage_path.rs
crates/bevyhub_api/src/scene_doc/: scene_app.rs  scene_doc.rs  scene_doc_api.rs  scene_include_tree.rs  set_latest_scenes_in_db.rs
crates/bevyhub_api/src/server/: app_routes.rs  app_state.rs  cache.rs  crate_routes.rs  github_routes.rs  mod.rs  scene_routes.rs  server.rs
crates/bevyhub_api/src/server/layers/: cors.rs  no_cache.rs
crates/bevyhub_api/src/services/: crates_io_files.rs  http_client.rs  mod.rs  services.rs
crates/bevyhub_api/src/types/: crate_id.rs  scene_id.rs
crates/bevyhub_api/tests/: mod.rs  mongo_sets_latest.rs
crates/bevyhub_core/: Cargo.toml
crates/bevyhub_core/src/: lib.rs
crates/bevyhub_core/src/components/: ui_terminal.rs
crates/bevyhub_core/src/export/: bevyhub_exporter.rs  mod.rs
crates/bevyhub_core/src/net/: default_replicate_plugin.rs
crates/bevyhub_core/src/plugins/: bevyhub_full_plugins.rs  mod.rs
crates/bevyhub_core/src/render/: bevyhub_default_plugins.rs  block_app_ready.rs  default_placeholder_plugin.rs  mod.rs
crates/bevyhub_core/src/scenes/: foxie.rs  hello_net.rs  setup_2d.rs  setup_3d.rs
crates/bevyhub_esp/: Cargo.toml  README.md
crates/bevyhub_esp/examples/: avoid_obstacles.rs  blinky_rgb.rs  depth_sensor.rs  depth_sensor_smooth.rs  hello_bevy.rs  motors.rs  net.rs  wifi.rs
crates/bevyhub_esp/src/: lib.rs
crates/bevyhub_net/: Cargo.toml  README.md
crates/bevyhub_net/examples/: client.rs  two_clients.rs
crates/bevyhub_net/src/: lib.rs
crates/bevyhub_net/src/events/: common_events.rs
crates/bevyhub_net/src/networking/: message.rs  transport.rs  transport_plugin.rs
crates/bevyhub_net/src/replication/: replicate_component.rs  replicate_entity.rs  replicate_event.rs  replicate_observer.rs  replicate_registry.rs  replicate_resource.rs
crates/bevyhub_net/src/tokio_client/: native_client.rs
crates/bevyhub_net/src/utils/: parse_utils.rs
crates/bevyhub_scene/: Cargo.toml
crates/bevyhub_scene/examples/: export_test_scene.rs  glam_types.rs
crates/bevyhub_scene/src/: lib.rs
crates/bevyhub_scene/src/export_types/: serde_type_info.rs  serde_type_registration.rs
crates/bevyhub_scene/src/scene_exporter/: scene_export_config.rs  scene_group_exporter.rs
crates/bevyhub_scene/src/utils/: spawn_scene_file.rs
crates/bevyhub_server/: Cargo.toml
crates/bevyhub_server/examples/: server.rs
crates/bevyhub_server/src/: lib.rs
crates/bevyhub_server/src/server/: lobby_client.rs  server.rs
crates/bevyhub_template/: Cargo.toml  README.md  justfile
crates/bevyhub_template/examples/: app.rs  export-bevyhub-template.rs
crates/bevyhub_template/public/: index.html
crates/bevyhub_template/scenes/: my-base-scene.json  my-beautiful-scene.json
crates/bevyhub_template/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/api/: local_crate_id.rs  package_locally.rs  populate_command.rs
crates/cli/src/build_web/: build_web.rs
examples/: app.rs  bevyhub_app.rs  export_scenes.rs  export_typescript.rs  terminal.rs  terminal_populated.rs  tmp.rs
scenes/: camera-2d.json  camera-3d.json  ground-3d.json  space-scene.json  test_scene.json  ui-terminal-input.json  ui-terminal.json
src/: lib.rs
