[package]
name = "bevyhub-cli"
# version.workspace = true
version.workspace = true
edition.workspace = true
description = "CLI tools for managing Bevyhub projects."
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[[bin]]
name = "bevyhub"
path = "src/main.rs"


[dependencies]
bevyhub_api.workspace = true
forky = { workspace = true, features = ["fs"] }

anyhow.workspace = true
clap = { version = "4.5", features = [] }

toml.workspace = true
semver.workspace = true
cargo-manifest.workspace = true

tokio.workspace = true
futures.workspace = true


[dev-dependencies]
sweet = { workspace = true, features = ["test"] }
